Alterar formato do menu de navegação. Fundo escuro

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav>
         <table align="center">
             <th>
-                <td><div class="menu"><a href="sobre-mim.html">1. Sobre mim</a></div></td>
-                <td><div class="menu"><a href="formacao.html">2. Formação</a></div></td>
-                <td><div class="menu"><a href="projetos.html">3. Projetos</a></div></td>
-                <td><div class="menu"><a href="contato.html">4. Contato</a></div></td>
+                <td><div class="menu"><a href="sobre-mim.html">Sobre mim</a></div></td>
+                <td><div class="menu"><a href="formacao.html">Formação</a></div></td>
+                <td><div class="menu"><a href="projetos.html">Projetos</a></div></td>
+                <td><div class="menu"><a href="contato.html">Contato</a></div></td>
             </th>
         </table>
     </nav>
