--- a/projetos.html
+++ b/projetos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="menu">
             <a href="index.html"><h1>Henrique - Desenvolvedor Web</h1></a>
         </div>
     </header>
