--- a/sobre-mim.html
+++ b/sobre-mim.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="menu">
+        <div class="title">
             <a href="index.html"><h1>Henrique - Desenvolvedor Web</h1></a>
         </div>
     </header>
