feat: Melhorias no projeto

--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
 <body>
     <header>
         <div class="title">
-            <a href="index.html"><h1>Henrique - Desenvolvedor Web</h1></a>
+            <a href="index.html"><h1>Henrique Sérgio - Desenvolvedor Web</h1></a>
         </div>
     </header>
     <nav>
-        <table align="center">
-            <th>
-                <td><div class="menu"><a href="sobre-mim.html">Sobre mim</a></div></td>
-                <td><div class="menu"><a href="formacao.html">Formação</a></div></td>
-                <td><div class="menu"><a href="projetos.html">Projetos</a></div></td>
-                <td><div class="menu"><a href="contato.html">Contato</a></div></td>
-            </th>
-        </table>
+        <div class="menu"><a href="sobre-mim.html">Sobre mim</a></div>
+        <div class="menu"><a href="formacao.html">Formação</a></div>
+        <div class="menu"><a href="projetos.html">Projetos</a></div>
+        <div class="menu"><a href="contato.html">Contato</a></div>
     </nav>
     <article>
         <p class="principal">Olá, meu nome é</p>
@@ -40,12 +36,7 @@
     <!-- Colocar este botão na página Contato, após o formulário de envio de
     mensagem, informando que os dados não serão enviados e que é possível
     entrar em contato através do e-mail.-->
-    <!--<input type="button" value="Enviar" onclick="msg()">
-    <script>
-        function msg() {
-            alert("Obrigado por entrar em contato! No momento, este formulário não " +
-            "está fcunional, mas é possível enviar e-mail para: henriqueslcosta@gmail.com.");
-        }
-    </script> -->
+    <!--<input type="button" value="Enviar" onclick="msg()"> -->
+    <script src="script.js"></script>
 </body>
 </html>
